    filing mode. This makes it convenient for shell users and is also required
    for proper Firefox 'Report a bug...' menu integration (see bug #85041).
  * debian/apport.install: Install ubuntu-bug to /usr/bin.
  * gtk/apport-gtk: Generously add some gtk.main_iteration() calls to avoid
    hanging dialogs, since we do not have a main loop.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 14 Feb 2007 13:19:49 +0100

apport (0.54) feisty; urgency=low

  * bin/apport: Re-enable, now that our kernel has been fixed to pipe complete
    core dumps to us.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 13 Feb 2007 09:33:38 +0100

apport (0.53) feisty; urgency=low

  * apport/ui.py, open_url(): Remove some accidentally left-over debugging
    junk.
  * gtk/apport-gtk: Process pending GTK events after hiding the info
    collection window to avoid a hanging dead dialog.
  * gtk/apport-gtk: Do not count the lines of fields with binary data. This
    particularly avoids long delays with huge core dumps. (LP: #81979)
  * apport/ui.py, open_url(): Print URL to stdout, so that we can debug the
    weirdness in #83974.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 12 Feb 2007 16:57:05 +0100

apport (0.52) feisty; urgency=low

  * apport/report.py: Fix hook directory to be
    /usr/share/apport/package-hooks/,  not /u/s/apport/.
  * Add doc/package-hooks.txt: Document per-package hooks, ship in package
    apport.
  * Add debian/apport.dirs: Ship package-hooks/ directory.
  * gtk/apport-gtk, qt4/apport-qt: Fix detection of binary data so that the
    CoreDump is not displayed as incomprehensible gibberish any more.
  * Add qt4/apport-qt.desktop.in and add it to POTFILES.in.
  * bin/apport-retrace: --verbose can now be specified multiple times to
    increase verbosity and debug package installation. Also, fix some quoting
    bugs. Thanks to Kees Cook for this!
  * qt4/apport-qt: Fix restart button handling. (LP: #84202)